[gd_scene load_steps=10 format=3 uid="uid://b14oao46gm8j3"]

[ext_resource type="Script" path="res://Scenes/Main.gd" id="1_5crac"]
[ext_resource type="PackedScene" uid="uid://cmrf0y78g21o5" path="res://Scenes/Game/Game.tscn" id="2_68g0q"]
[ext_resource type="Script" path="res://Scenes/Screens/UILayer.gd" id="3_ehway"]
[ext_resource type="PackedScene" uid="uid://belc883x5l327" path="res://Scenes/Screens/ConnectionScreen.tscn" id="4_33yvh"]
[ext_resource type="Theme" uid="uid://ouvd3hm6vjif" path="res://Theme/theme.tres" id="4_qk17j"]
[ext_resource type="PackedScene" uid="uid://dqhf2l36x7ggp" path="res://Scenes/Screens/MatchScreen.tscn" id="5_ars85"]
[ext_resource type="PackedScene" uid="uid://bn1iv83t2p8ma" path="res://Scenes/Screens/title_screen.tscn" id="6_6t2q4"]
[ext_resource type="PackedScene" uid="uid://wqp1k12jwgc8" path="res://Scenes/Screens/ReadyScreen.tscn" id="7_nm8k4"]
[ext_resource type="Texture2D" uid="uid://dby4we3paxh1o" path="res://Theme/bg_resize.jpg" id="9_fo3fy"]

[node name="Main" type="Node2D"]
script = ExtResource("1_5crac")

[node name="DefaultBackground" type="Control" parent="."]
z_index = -680
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_right = 1920.0
offset_bottom = 1080.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2

[node name="TextureRect" type="TextureRect" parent="DefaultBackground"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("9_fo3fy")

[node name="Game" parent="." instance=ExtResource("2_68g0q")]

[node name="UILayer" type="CanvasLayer" parent="." node_paths=PackedStringArray("version_label")]
script = ExtResource("3_ehway")
version_label = NodePath("Version")

[node name="Screens" type="Control" parent="UILayer"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 1.0
offset_right = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
theme = ExtResource("4_qk17j")

[node name="ConnectionScreen" parent="UILayer/Screens" instance=ExtResource("4_33yvh")]
visible = false
layout_mode = 1

[node name="MatchScreen" parent="UILayer/Screens" instance=ExtResource("5_ars85")]
layout_mode = 1

[node name="TitleScreen" parent="UILayer/Screens" instance=ExtResource("6_6t2q4")]
visible = false
layout_mode = 1

[node name="ReadyScreen" parent="UILayer/Screens" instance=ExtResource("7_nm8k4")]
visible = false
layout_mode = 1

[node name="Overlay" type="Control" parent="UILayer"]
layout_mode = 3
anchors_preset = 0
offset_right = 40.0
offset_bottom = 40.0

[node name="Message" type="Label" parent="UILayer/Overlay"]
layout_mode = 0
offset_right = 40.0
offset_bottom = 23.0

[node name="BackButton" type="Button" parent="UILayer/Overlay"]
visible = false
layout_mode = 0
offset_right = 8.0
offset_bottom = 8.0

[node name="MuteButton" type="Button" parent="UILayer/Overlay"]
visible = false
layout_mode = 0
offset_right = 8.0
offset_bottom = 8.0

[node name="Version" type="Label" parent="UILayer"]
z_index = 4096
offset_left = 11.0
offset_top = 1044.0
offset_right = 67.0
offset_bottom = 1068.0
theme_override_colors/font_color = Color(0, 0, 0, 1)
text = "v1.0.0.7"

[node name="Control" type="Control" parent="UILayer"]
layout_mode = 3
anchors_preset = 0
offset_right = 40.0
offset_bottom = 40.0

[node name="Mute" type="Button" parent="UILayer/Control"]
layout_mode = 0
offset_left = 1391.0
offset_top = 999.0
offset_right = 1484.0
offset_bottom = 1070.0
toggle_mode = true
text = "Mute"

[node name="HTTPRequest" type="HTTPRequest" parent="."]

[connection signal="s_game_over" from="Game" to="." method="_on_game_s_game_over"]
[connection signal="s_game_started" from="Game" to="." method="_on_game_s_game_started"]
[connection signal="play_local" from="UILayer/Screens/TitleScreen" to="." method="_on_title_screen_play_local"]
[connection signal="play_online" from="UILayer/Screens/TitleScreen" to="." method="_on_title_screen_play_online"]
[connection signal="ready_pressed" from="UILayer/Screens/ReadyScreen" to="." method="_on_ready_screen_ready_pressed"]
[connection signal="pressed" from="UILayer/Overlay/BackButton" to="UILayer" method="_on_back_button_pressed"]
[connection signal="toggled" from="UILayer/Overlay/MuteButton" to="UILayer" method="_on_mute_button_toggled"]
[connection signal="toggled" from="UILayer/Control/Mute" to="UILayer" method="_on_mute_toggled"]
